--- a/questionForm.css
+++ b/questionForm.css
@@ -1,150 +1,214 @@
 /*
 https://levelup.gitconnected.com/create-a-multi-step-form-using-html-css-and-javascript-30aca5c062fc
 */
+.chartForm {
+  display: flex;
+  justify-content: center;
+}
+
 .chartForm .slide {
-    background-color: #aab;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(200, 200, 200, 0.3);
+  width: 40vw;
+}
+
+.prompt p {
+  margin: 0;
+}
+
+.slide fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 1vh 1vw;
+}
+
+/*
+  Go through and figure out what we need
+  */
+ul.form-stepper {
+  width: 50vw;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0;
+}
+
+.navButton {
+  padding: 0.7rem 1.5rem;
+  border: 1px solid #34495e;
+  background-color: #34495e;
+  color: white;
+  cursor: pointer;
+}
+
+.submit-btn {
+  border: 1px solid #34495e;
+  background-color: #34495e;
+}
+.d-none {
+  display: none;
+}
+
+ul.form-stepper .form-stepper-circle {
+  position: relative;
+}
+ul.form-stepper .form-stepper-circle span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+}
+
+.form-stepper-horizontal {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+ul.form-stepper > li:not(:last-of-type) {
+  margin-bottom: 0.625rem;
+  -webkit-transition: margin-bottom 0.4s;
+  -o-transition: margin-bottom 0.4s;
+  transition: margin-bottom 0.4s;
+}
+
+.form-stepper-horizontal li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.form-stepper-horizontal a {
+  width: 3vw;
+}
+.form-stepper-horizontal li:not(:last-child):after {
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 1px;
+  content: "";
+  top: 32%;
+  width: 20vw;
+}
+.form-stepper-horizontal li:after {
+  background-color: #dee2e6;
+}
+.form-stepper-horizontal li.form-stepper-completed:after {
+  background-color: #34495e;
+}
+.form-stepper-horizontal li:last-child {
+  flex: unset;
+}
+ul.form-stepper li a .form-stepper-circle {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin-right: 0;
+  line-height: 1.7rem;
+  text-align: center;
+  background-color: #efefef;
+  border-radius: 50%;
+}
+.form-stepper .form-stepper-active .form-stepper-circle {
+  background-color: #34495e;
+  color: #fff;
+}
+.form-stepper .form-stepper-active .label {
+  color: #34495e;
+}
+.form-stepper .form-stepper-active .form-stepper-circle:hover {
+  background-color: #34495e;
+  color: #fff;
+}
+.form-stepper .form-stepper-unfinished .form-stepper-circle {
+  background-color: #f8f7ff;
+}
+.form-stepper .form-stepper-completed .form-stepper-circle {
+  background-color: #0e9594;
+  color: #fff;
+}
+.form-stepper .form-stepper-completed .label {
+  color: #0e9594;
+}
+.form-stepper .form-stepper-completed .form-stepper-circle:hover {
+  background-color: #0e9594;
+  color: #fff;
+}
+.form-stepper .form-stepper-active span.text-muted {
+  color: #fff;
+}
+.form-stepper .form-stepper-completed span.text-muted {
+  color: #fff;
+}
+.form-stepper .label {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+}
+.form-stepper a {
+  cursor: default;
+}
+
+.measurePoints {
+  display: flex;
+  flex-direction: row;
+}
+
+.measurePoint {
+  background-color: rgba(0, 0, 0, 0.06694560669);
+  border: 1px solid #ddd;
+  margin: 3px 3px 3px 0;
+  padding: 3px 4px;
+  line-height: 25px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.measurePoint:hover {
+  background-color: rgba(0, 0, 0, 0.07694560669);
+  border-color: #34495e;
+}
+
+.formContent {
+  margin: 2vh 2vw;
+}
+.navButtons {
+  align-self: flex-end;
+  width: 100%;
+}
+
+.navButtonsContainer .navNext {
+  align-self: flex-end;
+}
+
+.navButtonsContainer {
+  margin: 2vh 2vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+/*
+Make sure the next button in the first slide is properly placed
+*/
+.navButtons .navNext:only-child {
+  margin-left: auto;
+}
+
+@media (max-height: 500px) {
+  .chartForm .slide {
+    height: 100%;
+    max-height: 100%;
   }
-  
-  /*
-    Go through and figure out what we need
-    */
-  ul.form-stepper {
-    width: 50vw;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0;
-  }
-  
-  .navButton {
-    padding: 0.7rem 1.5rem;
-    border: 1px solid #34495e;
-    background-color: #34495e;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .submit-btn {
-    border: 1px solid #34495e;
-    background-color: #34495e;
-  }
-  .d-none {
-    display: none;
-  }
-  
-  ul.form-stepper .form-stepper-circle {
-    position: relative;
-  }
-  ul.form-stepper .form-stepper-circle span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-  }
-  
-  .form-stepper-horizontal {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-  }
-  ul.form-stepper > li:not(:last-of-type) {
-    margin-bottom: 0.625rem;
-    -webkit-transition: margin-bottom 0.4s;
-    -o-transition: margin-bottom 0.4s;
-    transition: margin-bottom 0.4s;
-  }
-  
-  .form-stepper-horizontal li {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: start;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-  }
-  .form-stepper-horizontal a {
-    width: 3vw;
-  }
-  .form-stepper-horizontal li:not(:last-child):after {
-    position: relative;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    height: 1px;
-    content: "";
-    top: 32%;
-    width: 20vw;
-  }
-  .form-stepper-horizontal li:after {
-    background-color: #dee2e6;
-  }
-  .form-stepper-horizontal li.form-stepper-completed:after {
-    background-color: #34495e;
-  }
-  .form-stepper-horizontal li:last-child {
-    flex: unset;
-  }
-  ul.form-stepper li a .form-stepper-circle {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin-right: 0;
-    line-height: 1.7rem;
-    text-align: center;
-    background-color: #efefef;
-    border-radius: 50%;
-  }
-  .form-stepper .form-stepper-active .form-stepper-circle {
-    background-color: #34495e;
-    color: #fff;
-  }
-  .form-stepper .form-stepper-active .label {
-    color: #34495e;
-  }
-  .form-stepper .form-stepper-active .form-stepper-circle:hover {
-    background-color: #34495e;
-    color: #fff;
-  }
-  .form-stepper .form-stepper-unfinished .form-stepper-circle {
-    background-color: #f8f7ff;
-  }
-  .form-stepper .form-stepper-completed .form-stepper-circle {
-    background-color: #0e9594;
-    color: #fff;
-  }
-  .form-stepper .form-stepper-completed .label {
-    color: #0e9594;
-  }
-  .form-stepper .form-stepper-completed .form-stepper-circle:hover {
-    background-color: #0e9594;
-    color: #fff;
-  }
-  .form-stepper .form-stepper-active span.text-muted {
-    color: #fff;
-  }
-  .form-stepper .form-stepper-completed span.text-muted {
-    color: #fff;
-  }
-  .form-stepper .label {
-    font-size: 1rem;
-    margin-top: 0.5rem;
-  }
-  .form-stepper a {
-    cursor: default;
-  }
-  
-  .navButtons {
-    margin: 1vh;
-  }
-  
+}
