--- a/questionForm.css
+++ b/questionForm.css
@@ -206,6 +206,49 @@ Make sure the next button in the first slide is properly placed
   margin-left: auto;
 }
 
+
+/*
+Radio switch 1st slide
+*/
+.radioSwitch {
+	display: flex;
+	overflow: hidden;
+}
+
+.radioSwitch input {
+	position: absolute;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+.radioSwitch label {
+	background-color: #e4e4e4;
+	text-align: center;
+	padding: 1vh 1vw;
+	margin-right: -1px;
+	border: 1px solid #34495e;
+	transition: all 0.1s ease-in-out;
+}
+
+.radioSwitch label:hover {
+	cursor: pointer;
+}
+
+.radioSwitch input:checked + label {
+	background-color: #34495e;
+	box-shadow: none;
+  color:white;
+}
+
+.measurePoint.clicked{
+  background-color:#34495e;
+  color:white;
+}
+
+
 @media (max-height: 500px) {
   .chartForm .slide {
     height: 100%;
